--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,5 @@
-<% provide :title, t(".contact") %>
-<h1><%= t ".contact" %></h1>
+<% provide :title, t(".title_contact") %>
+<h1><%= t ".title_contact" %></h1>
 <p>
   <%= t ".detail" %>
   <%= link_to "contact page", "http://www.railstutorial.org/contact" %>.
