--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,16 @@
-<% provide(:title, "Home") %>
-<h1><%= t ".sam" %></h1>
-<p>
-  <%= t ".info1" %>
-  <%= link_to "Rails Tutorial help section", "http://www.railstutorial.org" %>
-  <%= t ".info2" %>.
-</p>
+<% provide :title, t("layouts.application.home") %>
+<div class="center jumbotron">
+  <h1><%= t ".sam" %></h1>
+
+  <h2>
+    <%= t ".info1" %>
+    <%= link_to "Rails Tutorial help section", "http://www.railstutorial.org" %>
+    <%= t ".info2" %>.
+  </h2>
+
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+</div>
+  <%= link_to image_tag("rails.png", alt: "Rails logo"),
+            "http://rubyonrails.org/" %>
+  <%= image_tag("kitten.jpg", alt: "kitten") %>
+
