--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,5 +1,10 @@
-<h1>User#password_reset</h1>
+<h1><%= t ".reset_pass" %></h1>
 
-<p>
-  <%= @greeting %>, find me in app/views/user_mailer/password_reset.html.erb
-</p>
+<p><%= t ".to_reset" %></p>
+
+<%= link_to t(".reset_pass"), edit_password_reset_url(id: @user.reset_token,
+  email: @user.email) %>
+
+<p><%= t ".detail" %></p>
+
+<p><%= t ".detail1" %></p>
