--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,11 +1,18 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-$light-gray: #777;
 $dark: #fff;
-$gray: #eaeaea;
 $dark-gray: #555;
 $dark-gray1: #222;
+$gray-medium-light: #eaeaea;
+$light-gray: #777;
+$gray-medium: #bbb;
+
+@mixin box_sizing {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
 
 /* universal */
 
@@ -77,7 +84,7 @@ p {
 /* footer */
 
 footer {
-  border-top: 1px solid $gray;
+  border-top: 1px solid $gray-medium-light;
   color: $light-gray;
   margin-top: 45px;
   padding-top: 5px;
@@ -98,5 +105,82 @@ footer {
       float: left;
       margin-left: 15px;
     }
+  }
+}
+
+/* miscellaneous */
+
+.debug_dump {
+  clear: both;
+  float: left;
+  margin-top: 45px;
+  width: 100%;
+  @include box_sizing;
+}
+
+/* sidebar */
+
+aside {
+
+  section {
+    padding: 10px 0;
+    margin-top: 20px;
+    &:first-child {
+      border: 0;
+      padding-top: 0;
+    }
+    h1 {
+      font-size: 1.4em;
+      letter-spacing: -1px;
+      margin-bottom: 3px;
+      margin-top: 0px;
+      text-align: left;
+    }
+    span {
+      display: block;
+      line-height: 1;
+      margin-bottom: 3px;
+    }
+  }
+}
+
+.gravatar {
+  float: left;
+  margin-right: 10px;
+}
+
+.gravatar_edit {
+  margin-top: 15px;
+}
+
+section.user_info {
+  margin-top: 20px;
+}
+
+/* forms */
+
+input, textarea, select, .uneditable-input {
+  border: 1px solid $gray-medium;
+  margin-bottom: 15px;
+  width: 100%;
+  @include box_sizing;
+}
+
+input {
+  height: auto !important;
+}
+
+#error_explanation {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px;
+  }
+}
+
+.field_with_errors {
+  @extend .has-error;
+  .form-control {
+    color: $state-danger-text;
   }
 }
