--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,14 +6,14 @@
         <li><%= link_to t("layouts.application.home"), root_path %></li>
         <li><%= link_to t("static_pages.help.title_help"), help_path %></li>
         <% if logged_in? %>
-          <li><%= link_to "Users", "#" %></li>
+          <li><%= link_to "Users", users_path %></li>
           <li class="dropdown">
-            <%= link_to "#", {class: "dropdown-toggle", data:{toggle: "dropdown"}} do %>
-              <%= t("layouts.application.account") %><b class="caret"></b>
+            <%= link_to "#", class: "dropdown-toggle", data:{toggle: "dropdown"} do %>
+              <%= t "layouts.application.account" %><b class="caret"></b>
             <% end %>
             <ul class="dropdown-menu">
               <li><%= link_to t("layouts.application.profile"), current_user %></li>
-              <li><%= link_to t("layouts.application.setting"), "#" %></li>
+              <li><%= link_to t("layouts.application.setting"), edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to t("layouts.application.logout"), logout_path, method: :delete %>
