--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,24 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t("layouts.application.home"), root_path %></li>
         <li><%= link_to t("static_pages.help.title_help"), help_path %></li>
-        <li><%= link_to t(".login"), signup_path %></li>
+        <% if logged_in? %>
+          <li><%= link_to "Users", "#" %></li>
+          <li class="dropdown">
+            <%= link_to "#", {class: "dropdown-toggle", data:{toggle: "dropdown"}} do %>
+              <%= t("layouts.application.account") %><b class="caret"></b>
+            <% end %>
+            <ul class="dropdown-menu">
+              <li><%= link_to t("layouts.application.profile"), current_user %></li>
+              <li><%= link_to t("layouts.application.setting"), "#" %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to t("layouts.application.logout"), logout_path, method: :delete %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to t("layouts.application.login"), login_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
